@@ -5,18 +5,17 @@ import { clientAttributesDecoration } from './clientAttributesDecoration';
 
 
 /**
- * Decorator that binds a key and (optionally) a traffic type to client methods
+ * Decorator that binds a key to client methods
  *
  * @param client sync client instance
  * @param key validated split key
- * @param trafficType validated traffic type
  */
-export function clientCSDecorator(log: ILogger, client: SplitIO.IClient, key: SplitIO.SplitKey, trafficType?: string): SplitIO.ICsClient {
+export function clientCSDecorator(log: ILogger, client: SplitIO.IClient, key: SplitIO.SplitKey): SplitIO.ICsClient {
 
   let clientCS = clientAttributesDecoration(log, client);
 
   return objectAssign(clientCS, {
-    // In the client-side API, we bind a key to the client `getTreatment*` methods
+    // In the client-side API, we bind a key to the client `getTreatment*` and `track` methods
     getTreatment: clientCS.getTreatment.bind(clientCS, key),
     getTreatmentWithConfig: clientCS.getTreatmentWithConfig.bind(clientCS, key),
     getTreatments: clientCS.getTreatments.bind(clientCS, key),
@@ -26,12 +25,10 @@ export function clientCSDecorator(log: ILogger, client: SplitIO.IClient, key: Sp
     getTreatmentsByFlagSet: clientCS.getTreatmentsByFlagSet.bind(clientCS, key),
     getTreatmentsWithConfigByFlagSet: clientCS.getTreatmentsWithConfigByFlagSet.bind(clientCS, key),
 
-    // Key is bound to the `track` method. Same thing happens with trafficType but only if provided
-    track: trafficType ? clientCS.track.bind(clientCS, key, trafficType) : clientCS.track.bind(clientCS, key),
+    track: clientCS.track.bind(clientCS, key),
 
     // Not part of the public API. These properties are used to support other modules (e.g., Split Suite)
     isClientSide: true,
-    key,
-    trafficType
+    key
   }) as SplitIO.ICsClient;
 }
